--- a/tasks/instances.yml
+++ b/tasks/instances.yml
@@ -77,7 +77,8 @@
 - set_fact:
     bastion_instance_id: "{{ ec2_public_instances[0].id }}"
 
-- add_host: name="{{ ec2_public_instances[0].public_dns_name }}" groups=bastion
+
+- debug: msg="bastion host {{ ec2_public_instances[0].dns_name }} {{ ec2_public_instances[0].public_dns_name }} was added"
 
 - name: Add volumes to public bastion instances
   ec2_vol:
@@ -98,8 +99,39 @@
     reuse_existing_ip_allowed: yes
     state: present
     region: "{{ ec2_region }}"
-    instance_id: "{{ bastion_instance_id }}"
+    device_id: "{{ bastion_instance_id }}"
   register: bastion_eip
+
+# Because the public DNS name is no longer valid after associating the floating IP,
+# we need to update the public IP to the floating IP and DNS A records.
+# http://stackoverflow.com/questions/39493070/ansible-ec2-get-public-dns-after-associate-elastic-ip
+
+- name: Refresh bastion information after elastic IP
+  ec2_remote_facts:
+    region: "{{ ec2_region }}"
+    filters:
+      "tag:instance_role": "bastion"
+      instance-state-name: running
+  register: ec2
+
+- set_fact:
+    ec2_instances:  "{{ ec2.instances }}"
+  when: ec2.instances is defined and ec2.instances
+
+- set_fact:
+    ec2_instances: "{{ ec2.tagged_instances }}"
+  when: ec2.tagged_instances is defined and ec2tagged_instances
+
+- set_fact:
+    ec2_public_instances: "{{ ec2_instances }}"
+  when: ec2.instances is defined
+
+- name: what is in ec2?
+  debug: var=ec2_public_instances
+
+- debug: msg="refreshed bastion host {{ ec2_public_instances[0].public_dns_name }}"
+
+- add_host: name="{{ ec2_public_instances[0].public_dns_name }}" groups=bastion
 
 # You need this part to work for the SSH proxy logic
 - name: Create a Route 53 entry for the bastion
@@ -112,6 +144,8 @@
     value: "{{ bastion_eip.public_ip }}"
     wait: yes
     overwrite: yes
+
+- debug: msg="bastion eip {{ bastion_eip.public_ip }} bastion.{{ cluster_id }}.{{ r53_zone }} was added"
 
 - name: Create the bastion ssh config file
   connection: local
@@ -285,6 +319,9 @@
 
 - set_fact: ec2_private_instances="{{ ec2_private_instances_list_result.results | map(attribute='ansible_facts.ec2_private_instances_list') | list }}"
 
+- name: what is in ec2 private instances?
+  debug: var=ec2_private_instances
+
 - name: Add volumes to private master and node instances
   ec2_vol:
     instance: "{{ item[0].id }}"
@@ -297,9 +334,12 @@
     - "{{ ec2_private_masters_sidea + ec2_private_masters_sideb + ec2_private_nodes_sidea + ec2_private_nodes_sideb }}"
     - "{{ private_manifest['nodes']['volumes'] }}"
 
+# ec2_remote_facts uses private_ip_address instead of private_ip for some reason
+# This sucks so using a hack to assign the proper one regardless
+
 - name: make list of internal ips
   set_fact:
-    private_ip_item: "{{ item.private_ip }}"
+    private_ip_item: "{{ item.private_ip if 'private_ip' in item else item.private_ip_address }}"
   with_items:
     - "{{ ec2_public_instances }}"
     - "{{ ec2_private_instances }}"
@@ -340,5 +380,5 @@
     - "{{ ec2_public_instances }}"
   register: result
   until: result.rc == 0
-  retries: 60
+  retries: 10
   delay: 60
